{
    "name": "DefaultControls",
    "maps": [
        {
            "name": "Player",
            "id": "ca6b4e56-ccce-4454-b856-f2774c67b923",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "c421c63f-78da-4191-a273-1427acce6746",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "60fb919c-2068-4800-b973-3da46a54e1c4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "963f9fb4-019b-480a-bac2-4c7b75653bc1",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a16723a-5aa9-4e9c-9063-8fb72492c0b2",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}